# EhViewer

./: .editorconfig  .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: android.yml  ci.yml  fastlane.yml  pull_request.yml  releases.yml
app/: build.gradle  build.gradle.bak  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 0001-Don-t-build-other-binaries.patch  0001-Don-t-build-other-binarys.patch  0001-Insert-link-libs.patch  0002-Fix-zip_time-performance.patch  0003-Use-UTF-8-as-default-charset-on-bionic.patch  CMakeLists.txt  archive.c  fdutils.c  gifutils.c  hash.c  image.c
app/src/main/cpp/natsort/: strnatcmp.c  strnatcmp.h
app/src/main/cpp/nettle/: .gitignore  CMakeLists.txt  config.h
app/src/main/res/drawable/: category_background.xml  check_text_view_foreground.xml  ic_baseline_dark_mode_24.xml  ic_baseline_format_list_numbered_24.xml  ic_baseline_label_24.xml  ic_baseline_menu_24.xml  ic_baseline_reorder_24.xml  ic_baseline_warning_24.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_pause_108dp.xml  ic_play_arrow_108dp.xml  round_side_rect.xml  v_double_arrow_up_24.xml  v_filter_dark_x24.xml  v_pin_top_24.xml  v_sec_primary_x24.xml
app/src/main/res/drawable-v25/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-v26/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/layout/: activity_filter.xml  activity_gallery.xml  activity_hosts.xml  activity_main.xml  activity_preference.xml  activity_set_security.xml  dialog_add_filter.xml  dialog_edittext_builder.xml  dialog_edittextcheckbox_builder.xml  dialog_gallery_menu.xml  dialog_hosts.xml  dialog_js_prompt.xml  dialog_list_checkbox_builder.xml  dialog_rate.xml  dialog_recycler_view.xml  dialog_torrent_list.xml  drawer_list_rv.xml  gallery_detail_actions.xml  gallery_detail_comments.xml  gallery_detail_content.xml  gallery_detail_header.xml  gallery_detail_info.xml  gallery_tag_group.xml  item_download.xml  item_drawer_list.xml  item_gallery_comment.xml  item_gallery_comment_more.xml  item_gallery_grid.xml  item_gallery_info_data.xml  item_gallery_info_header.xml  item_gallery_list.xml  item_gallery_list_thumb_height.xml  item_gallery_tag.xml  item_hosts.xml  item_simple_list_2.xml  nav_header_main.xml  preference_dialog_proxy.xml  preference_dialog_task.xml  scene_cookie_sign_in.xml  scene_download.xml  (+19 more)
app/src/main/res/layout-land/: activity_set_security.xml
app/src/main/res/menu/: context_comment.xml  download_label_option.xml  drawer_download.xml  drawer_gallery_list.xml  quicksearch_option.xml  scene_download.xml  scene_gallery_detail.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/mipmap-night-anydpi-v26/: ic_launcher.xml
app/src/main/res/transition/: trans_move.xml
app/src/main/res/values/: arrays.xml  attrs.xml  bools.xml  color_launcher.xml  colors.xml  dimens.xml  (+5 more)
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: color_launcher.xml  colors.xml
app/src/main/res/values-night-v31/: color_launcher.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-v24/: arrays.xml
app/src/main/res/values-v31/: color_launcher.xml
app/src/main/res/values-zh-rCN/: bools.xml  strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
daogenerator/: build.gradle
docs/CHANGELOG/: zh-cn.md
docs/README/: zh-cn.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle
native/src/main/jni/: CMakeLists.txt  main.c
native/src/main/jni/image/libjpeg-turbo/: jconfig.h  jconfigint.h  jversion.h
(+579 files in other folders)
